2012-01-24  Martin Pärtel <martin dot partel at gmail dot com>

	* Added --hide-hard-links.

2010-08-07  Martin Pärtel <martin dot partel at gmail dot com>

	* Improved --help and manpage.
	* Disabled FUSE attribute cache when using mirroring to avoid
	  caching the owner of files when observed by a mirrored user.
	* Added a testcase for the above.
	* Released 1.9

2010-01-17  Martin Pärtel <martin dot partel at gmail dot com>

	* Added options to control the behavior of chown and chgrp.
	* Released 1.8.4

2009-03-28  Martin Pärtel <martin dot partel at gmail dot com>

	* Added --ctime-from-mtime. Contributed by Shez.
	* Added --chmod-allow-x.
	* Released 1.8.3

2008-12-14  Martin Pärtel <martin dot partel at gmail dot com>

	* Converted ChangeLog to UTF-8.

2008-12-13  Martin Pärtel <martin dot partel at gmail dot com>

	* Specified that the license is GPL v2 or later in all source files
	  and in the README file.
	* Released 1.8.2 with no functional changes.

2008-12-12  Martin Pärtel <martin dot partel at gmail dot com>

	* Made xattr-rw the default instead of xattr-ro,
	  which returned a "permission denied" that could mislead some programs.
	* Released 1.8.1

2008-08-17  Martin Pärtel <martin dot partel at gmail dot com>

	* Fixed segfault in option parsing on platforms where
	  sizeof(int) != sizeof(long), such as amd64.
	* Released 1.8

2008-07-08  Martin Pärtel <martin dot partel at gmail dot com>

	* Symlinks to absolute paths didn't work. Now they do.
	  Reported by rpfuller. Thanks!
	* Ownership of symlinks weren't set. Now they are.
	  Again, reported by rpfuller. Thanks again!
	* Released 1.7

2008-06-26  Martin Pärtel <martin dot partel at gmail dot com>

	* --create-as-* and --create-for-* weren't applied for mknod().
	  Bug report and patch by rpfuller. Thanks!
	* Released 1.6.2

2008-06-25  Martin Pärtel <martin dot partel at gmail dot com>

	* Added copyright messages to each source file.