@@ -196,7 +196,17 @@ The read/write permissions are checked against the (possibly modified)
 file permissions inside the mount.
 
 
-.SH MISCELLANEOUS WORKAROUNDS
+.SH MISCELLANEOUS OPTIONS
+
+.TP
+.B \-\-realistic\-permissions, \-o realistic\-permissions
+Hides read/write/execute permissions for a mirrored file when the mounter
+doesn't have read/write/execute access to the underlying file.
+Useless when mounting as root, since root will always have full access.
+
+(Prior to version 1.10 this option was the default behavior.
+I felt it violated the principle of least surprise badly enough
+to warrant a small break in backwards-compatibility.)
 
 .TP
 .B \-\-ctime\-from-mtime, \-o ctime\-from\-mtime
